# practice-hands

./: readme.md
blockchain/search_eth/: go.mod  go.sum  main.go
blockchain/vimer_v1/: Readme.md  go.mod  main.go
blockchain/vimer_v2/: .gitignore  Readmd.md  block.go  main.go  proofOfWork.go
blockchain/vimer_v3/: Readme.md  block.go  blockChain.db  blockChain.go  commandLine.go  commands.go  main.go  proofOfWork.go  utils.go
blockchain/vimer_v4/: Readme.md  block.go  blockChain.db  blockChain.go  commandLine.go  commands.go  go.mod  proofOfWork.go  transaction.go
docker/drone/: start_drone.sh  start_drone_runner.sh
docker/etcd/: Dockerfile  docker-compose.yml
docker/gogs/: start.sh
docker/mysql/: .gitignore  Readme.md  start.sh
docker/nsq/: docker-compose.yml  start.sh
docker/openresty/: .gitignore  start.sh
docker/redis/: start.sh
ethereum/wallet/: .gitignore  generate_wallet.go  go.mod
gRpc/hello/: .gitignore  README.md
go-zero/greet/: go.mod
go-zero/shorturl/: go.mod  go.sum  shorturl.api
golang/asynq/: Readme.md  client.go  go.mod  tasks.go
golang/daemon/: go.mod
golang/encrypt/: go.mod  (+1 more)
kratos-demo/: .gitignore  go.mod
rust/rbatis_demo/: Cargo.toml
rust/rbatis_demo/src/: main.rs
rust/sqlx_db/: Cargo.toml
rust/sqlx_db/src/: main.rs
shell/: bashrc  coc-settings.json  gitconfig  gitignore  golang.sh  init.vim  initNewComputer.md  initNewComputer.sh  notifyProtectEye.sh  rust.sh  rust_cargo_config  sshconfig.sh  tmux.conf  windowsTerminalConfig.json  wslconfig
tron-rpc/: .gitignore
wallet/: package-lock.json  package.json
(+351 files in other folders)
