[package]
name = "rbatis_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
log = "0.4"
fast_log = "1.3"
bigdecimal="0.2"
rbatis = {version = "*", default-features = false, features = ["tokio1", "mysql"]}
lazy_static = "1.4"
tokio = { version = "1.9", features = ["full"] }
