[package]
name = "sqlx_db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.8", features = ["attributes"]}
futures = "0.3"
sqlx = {version = "*", features = ["sqlite"]}
structopt = {version = "0.3", features = ["paw"]}
